--- a/autobahn/autobahn_app/autobahn_frontend/index.html
+++ b/autobahn/autobahn_app/autobahn_frontend/index.html
@@ -7,6 +7,10 @@
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Bungee&display=swap" rel="stylesheet">
     <meta charset="UTF-8" />
     <link rel="icon" href="./public/favicon.ico" type="AUTOBAHN-Icon">
