--- a/autobahn/autobahn_app/autobahn_frontend/index.html
+++ b/autobahn/autobahn_app/autobahn_frontend/index.html
@@ -15,7 +15,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="./public/favicon.ico" type="AUTOBAHN-Icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AUTOBAHN</title>
+    <title>AUTOBAHN - No Limits</title>
   </head>
   <body>
     <div id="root"></div>
